--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,3 +2,19 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
+
+@keyframes fadeIn {
+    from {
+      opacity: 0;
+      transform: translateY(20px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+  
+  .animate-fadeIn {
+    animation: fadeIn 1s ease-out forwards;
+  }
+  
